--- a/FrontEnd/DxnSisventas/Main.Master
+++ b/FrontEnd/DxnSisventas/Main.Master
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html lang="es-es">
 <head runat="server">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script type="text/javascript" src="/Scripts/bootstrap.bundle.min.js"></script>
@@ -176,7 +176,7 @@
 
 
     <footer class="footer">
-      <nav class="navbar navbar-expand-sm navbar-light bg-gradient fixed-bottom" style="background-color: #082444;">
+      <nav class="navbar navbar-expand navbar-light bg-gradient fixed-bottom" style="background-color: #082444;">
         <ul class="navbar-nav d-flex justify-content-around w-100">
           <li class="nav-item">
             <asp:LinkButton class="nav-link" runat="server" OnClick="LbInicio_Click"><i class="fa fa-home"></i></asp:LinkButton>
