--- a/FrontEnd/DxnSisventas/CustomStyles/Master.css
+++ b/FrontEnd/DxnSisventas/CustomStyles/Master.css
@@ -1,10 +1,4 @@
-﻿* {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.notification-panel {
+﻿.notification-panel {
   position: absolute;
   top: 20px;
   right: 20px;
