--- a/Backend/BBBWebService/src/java/pe/edu/pucp/BBB/webservice/templates/Comprobante.jrxml
+++ b/Backend/BBBWebService/src/java/pe/edu/pucp/BBB/webservice/templates/Comprobante.jrxml
@@ -533,7 +533,7 @@
 				<textElement textAlignment="Center">
 					<font size="16"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{porcentaje_descuento}!= null ? "%"+$F{porcentaje_descuento} : null]]></textFieldExpression>
+				<textFieldExpression><![CDATA["-"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="Style1" x="730" y="0" width="80" height="29" uuid="6019bf4a-38a6-46b8-a30a-a08e7fd596bb"/>
@@ -558,21 +558,23 @@
 				<textElement>
 					<font size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Total          : " + "S/."+$F{total}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Total          : " + "S/. "+$F{total}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="580" y="68" width="228" height="30" uuid="dd1537b1-11d2-41cc-b1aa-f96f310e1acf"/>
 				<textElement>
 					<font size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{porcentaje_descuento}!= null ? "Descuento : " +"S/."+ ($F{total}.doubleValue() * (1 - +$F{porcentaje_descuento}.doubleValue()/ 100)) : "Descuento :  -"]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{porcentaje_descuento}!= null ? "Descuento : " +"S/. "+ $F{porcentaje_descuento}: "Descuento :  -"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="580" y="38" width="228" height="30" uuid="6c22e3d5-a0c8-40d3-bb00-f55274c9b75f"/>
 				<textElement>
 					<font size="18"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{porcentaje_descuento}!= null ? "SubTotal    : S/. " + new java.text.DecimalFormat("#0.00").format($F{total}.doubleValue() / ((100 - $F{porcentaje_descuento}.doubleValue()) / 100)) : "SubTotal   : S/.  " +$F{total}.doubleValue()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{porcentaje_descuento} != null 
+    ? "SubTotal    : S/. " + ($F{total}.doubleValue()+ $F{porcentaje_descuento}.doubleValue()) 
+    : "SubTotal   : S/.  " + $F{total}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="-1" y="20" width="400" height="30" uuid="bb3cec04-175e-4cf0-a7dc-6695b4c18d08"/>
@@ -582,7 +584,7 @@
 				<textFieldExpression><![CDATA[$F{tipo_venta}!= null ? "Tipo de Venta: " + $F{tipo_venta} : null]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
-				<reportElement x="0" y="68" width="419" height="110" uuid="6de66bec-74f4-49fa-aae0-ff5855cb8231"/>
+				<reportElement x="0" y="68" width="420" height="110" uuid="6de66bec-74f4-49fa-aae0-ff5855cb8231"/>
 				<textElement>
 					<font size="14"/>
 				</textElement>
